<resources>
    <string name="app_name">EESystem_C</string>
    <string name="waitcard_message">カードをかざしてください</string>
    <string name="button">IDの確認</string>
    <string name="enter_message">入室</string>
    <string name="exit_message">退室</string>
    <string name="stats">待機</string>
    <string name="nameT_S">氏名</string>
    <string name="gradeT_S">学年</string>
    <string name="timeT_S">時刻</string>
    <string name="statsT_S">状態</string>
    <string name="name1_S"></string>
    <string name="grade1_S"></string>
    <string name="time1_S"></string>
    <string name="stats1_S"></string>
    <string name="draw_id"></string>
    <string name="back">戻る</string>
</resources>
